Bug 1946032 - fix vertical tab groups label animation when sidebar is collapsing r=dao,desktop-theme-reviewers,tabbrowser-reviewers
The tab group label in vertical tabs uses `margin: auto` to center in the tab strip when the sidebar is collapsed. When the sidebar becomes expanded, the tab group label sticks to the main inline boundary (the left edge in LTR locale with left sidebar). When the expanded-to-collapsed sidebar animation starts, the tab group label snaps into the middle of the expanded sidebar. When the animation ends, the tab group label snaps into the middle of the collapsed sidebar, where is it supposed to go.

The tabs are avoiding this by using fixed inline margins to center themselves in the collapsed sidebar. This patch uses the same approach so that the tab group label always sticks to the main inline boundary during the animation.

Differential Revision: https://phabricator.services.mozilla.com/D247672

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1107,7 +1107,14 @@ tab-group {
     width: 24px;
     min-height: 24px;
     max-width: 24px;
-    margin: auto;
+    /*
+     * Keep tab group label square in collapsed sidebar centered without
+     * margin: auto, similar to how tabs' .tab-background use margin in order
+     * to stay centered in the collapsed sidebar. This helps prevent the tab
+     * group label from jumping around during the sidebar collapsed-to-expanded
+     * transition.
+     */
+    margin-inline: calc(var(--tab-inner-inline-margin) + (var(--tab-collapsed-background-width) - 24px) / 2);
     font-size: 0;
 
     &::first-letter {
